fix scrollbar on round move on mobile
justify-content: flex-end removes scrollbar and scrolling ability

https://stackoverflow.com/questions/36130760/use-justify-content-flex-end-and-to-have-vertical-scrollbar

--- a/ui/round/css/_moves.scss
+++ b/ui/round/css/_moves.scss
@@ -98,7 +98,6 @@
       display: flex;
       flex-flow: row;
       align-items: stretch;
-      justify-content: flex-end;
       white-space: nowrap;
       width: 100vw;
       overflow-x: scroll;
@@ -108,6 +107,9 @@
       }
       &::-webkit-scrollbar-thumb {
         background: $c-accent;
+      }
+      > :first-child {
+        margin-left: auto !important;
       }
       --horiz: 1;
     }
